--- a/web/appraisal/templates/appraisal/modals_edit_property.html
+++ b/web/appraisal/templates/appraisal/modals_edit_property.html
@@ -35,10 +35,11 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-      <button class="btn btn-danger" id="btn_remove_property" value="{{real_estate.id}}">
+      <button class="btn btn-danger ld-ext-right" id="btn_remove_property" value="{{real_estate.id}}">
         Borrar
+        <div class="ld ld-ring ld-spin" style="display:none;"></div>
       </button>
-      <button class="btn btn-primary" id="btn_edit_property" value="{{real_estate.id}}">
+      <button class="btn btn-primary ld-ext-right" id="btn_edit_property" value="{{real_estate.id}}">
         Guardar
         <div class="ld ld-ring ld-spin" style="display:none;"></div>
       </button>
