--- a/web/appraisal/templates/appraisal/surroundings.html
+++ b/web/appraisal/templates/appraisal/surroundings.html
@@ -6,7 +6,7 @@
       <p class="font-weight-bold text-right">Plano de ubicación</p>
     </div>
     <div class="col-6">
-      <p><img src="https://maps.googleapis.com/maps/api/staticmap?center={{realestate.addressStreet}} {{realestate.addressNumber}}&zoom=15&size=600x300&maptype=roadmap&key=AIzaSyDgwKrK7tfcd9kCtS9RKSBsM5wYkTuuc7E&markers=color:blue%7Clabel:A%7C{{realestate.lat}},{{ realestate.lng}}"></p>
+      <p><img src="https://maps.googleapis.com/maps/api/staticmap?center={{appraisal.real_estates.first.addressStreet}} {{appraisal.real_estates.first.addressNumber}}&zoom=15&size=600x300&maptype=roadmap&key=AIzaSyDgwKrK7tfcd9kCtS9RKSBsM5wYkTuuc7E&markers=color:blue%7Clabel:A%7C{{appraisal.real_estates.first.lat}},{{appraisal.real_estates.first.lng}}"></p>
     </div>
   </div>
 
