--- a/web/building/templates/building/roles.html
+++ b/web/building/templates/building/roles.html
@@ -12,8 +12,8 @@
         </select>
       </div>
       <div class="col-3" style="padding-left:0.3em;">
-        <button id="btn_edit_rol_modal" type="button" class="btn btn-sm btn-outline-dark" value="{{real_estate.id}}" style="font-family:Material Icons;font-size:1.2em;margin-bottom:1px;">
-          <div class="icon" style="font-size:0.74em;">edit</div>
+        <button id="btn_edit_rol_modal" type="button" class="btn btn-sm btn-outline-dark" value="{{real_estate.id}}" style="margin-bottom:1px;">
+          <i class="icon material-icons" style="font-size:15px;vertical-align: text-top;">edit</i>
           <div class="ld ld-ring ld-spin" style="display:none;"></div>
         </button>
       </div>
