--- a/web/main/templates/main/appraisals_finished.html
+++ b/web/main/templates/main/appraisals_finished.html
@@ -49,7 +49,7 @@
     </td>
     -->
     <td>
-      {{appraisal.timeFinished | date }}
+      {{appraisal.timeFinished | date:"d/m/Y G:i" }}
     </td>
     <td>
     </td>
