--- a/web/main/templates/main/appraisals_not_assigned.html
+++ b/web/main/templates/main/appraisals_not_assigned.html
@@ -90,6 +90,7 @@
     </td>
     <td>
       {% include 'main/btn_logbook.html' %}
+      {% include 'main/btn_delete.html' %}
     </td>
   </tr>
   {% endfor %}
