--- a/web/appraisal/templates/appraisal/annex_photo.html
+++ b/web/appraisal/templates/appraisal/annex_photo.html
@@ -4,28 +4,32 @@
     <div style="position: relative;width: 100%;height: 300px;overflow: hidden;" class="container">
       <img class="image" src="{{photo.photo.url}}"/>
       <div class="middle">
-        <button type="button" class="btn btn-dark photo_modal" data-photo_id="{{photo.id}}">
+        <button type="button" class="btn_photo_modal btn btn-dark" data-photo_id="{{photo.id}}">
           Modificar imagen
         </button>
       </div>
     </div>
     {% else %}
-    <button type="button" class="btn btn-dark btn-block rounded-0 border-0 photo_modal" data-photo_id="{{photo.id}}" style="height:300px;padding: 30% 0;">
+    <button type="button" class="btn_photo_modal btn btn-dark btn-block rounded-0 border-0" data-photo_id="{{photo.id}}" style="height:300px;padding: 30% 0;">
       Agregar imagen
     </button>
     {% endif %}
     <div class="card-body">
-      <input name="photo_description_{{photo.id}}" class="form-control form-control-sm in_description" style="display:none;">
       <div class="row">
-        <div class="col text-left">
+        <div class="col-10 text-left">
           <p class="card-title description mb-0">
-            {{photo.get_category_display}}
+            <span style="font-weight: 800">{{photo.get_category_display}}</span>
           </p>
+          {% if photo.description %}
+          <p class="mb-0">
+            <small>{{photo.description}}</small>
+          </p>
+          {% endif %}
         </div>
-        <div class="col text-right">
-          <button name="btn_delete_photo" value="{{photo.id}}" class="btn btn-sm" style="padding:0px; border:0px;">
-            <i class="material-icons">delete</i>
-          </button>
+        <div class="col-2 text-right">
+          {% if photo.photo %}
+          {% include 'main/btn_delete.html' %}
+          {% endif %}
         </div>
       </div>
     </div>
