--- a/web/appraisal/templates/appraisal/properties.html
+++ b/web/appraisal/templates/appraisal/properties.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<script src="{% static "appraisal/js/properties.js" %}" type="text/javascript"></script>
+<script src="{% static 'appraisal/js/properties.js' %}" type="text/javascript"></script>
 
 <script>
   $(document).ready(function($) {
