--- a/web/accounting/templates/accounting/accounting.html
+++ b/web/accounting/templates/accounting/accounting.html
@@ -20,8 +20,7 @@
             <div class="form-group">
                 <label>Tasadores</label>
                 <select name="tasador" class="form-control" required="" id="id_tasador">
-                    <option value="" selected="">---------</option>
-                    <option value="0">Todos los tasadores</option>
+                    <option value="0" selected>Todos los tasadores</option>
                     {% for tasador in tasadores %}
                     <option value="{{tasador.id}}">{{tasador.first_name}} {{tasador.last_name}}</option>
                     {% endfor %}
